Small style changes

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,8 @@
 
 
       {% comment %} Always show link to home page. {% endcomment %}
-      <a class="navbar-brand" href="{{ page.root }}{% link index.md %}">Home</a>
+      <a class="navbar-brand logo" href="{{ page.root }}{% link index.md %}"></a>
+      <a class="navbar-brand desktop-only" href="{{ page.root }}{% link index.md %}">Home</a>
 
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
