--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,15 +30,16 @@
           <a href="{{ page.root }}/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lectures<span class="caret"></span></a>
           <ul class="dropdown-menu">
             {% for episode in site.episodes %}
-            <li><a href="{{ page.root }}{{ episode.url }}">{{ episode.title }}</a></li>
-              {% for nav-item in episode.navigation %}
-              {% assign nav_id = nav-item.id | downcase | replace: " ", "-" %}
-                <li><a href="{{ page.root }}{{ episode.url }}#{{ nav_id }}">{{ nav-item.id }}</a></li>
-                  {% if nav-item.children %}
-                    {% assign menu = nav-item.children %}
-                    {% include custom_nav.html %}
-                  {% endif %}
-                {% endfor %}
+              <li class="dropdown-submenu">
+				          <a class="test" href="{{ page.root }}{{ episode.url }}">{{ episode.title }}</a>
+                  {% comment %} For each episode, generate a navigation dropdown based on the front matter variable 'navigation'. {% endcomment %}
+			            <ul class="dropdown-menu">
+                    {% for nav-item in episode.navigation %}
+                      {% assign nav_id = nav-item.id | downcase | replace: " ", "-" %}
+                    <li><a href="{{ page.root }}{{ episode.url }}#{{ nav_id }}">{{ nav-item.id }}</a></li>
+                    {% endfor %}
+			             </ul>
+               </li>
             {% endfor %}
           </ul>
         </li>
