fixed href for syllabus table

--- a/_includes/syllabus.html
+++ b/_includes/syllabus.html
@@ -21,9 +21,10 @@ Days are displayed if at least one episode has 'start = true'.
             <td class="col-md-7">Download files required for the lesson</td>
         </tr>
         {% for collection in site.data.navigation-list.navigation_list %}
+        {% assign collection_first_page = collection.links[0] %}
         <tr>
             <td class="{% if multiday %}col-md-1{% else %}col-md-2{% endif %}"></td>
-            <td class="col-md-3">{{ forloop.index }}. <a href="{{ page.root }}{{ collection.id }}">{{ collection.title }}</a></td>
+            <td class="col-md-3">{{ forloop.index }}. <a href="{{ page.root }}/{{ collection.id }}/{{ collection_first_page.link }}">{{ collection.title }}</a></td>
             <td class="col-md-7"></td>
         </tr>
         {% endfor %}
