links appended with .html extension

--- a/_includes/main_title.html
+++ b/_includes/main_title.html
@@ -1,4 +1,5 @@
 {% comment %}
   Main title for lesson pages.
 {% endcomment %}
-<h1 class="maintitle"><a href="{{ page.root }}{% link index.md %}">{{ site.title }}</a>{% if page.title %}: {{ page.title }}{% endif %}</h1>
+{% assign index_page = 'index.html' %}
+<h1 class="maintitle"><a href="{{ page.root }}/{{ index_page }}">{{ site.title }}</a>{% if page.title %}: {{ page.title }}{% endif %}</h1>
