--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -8,4 +8,4 @@ layout: base
 {{content}}
 {% include episode_keypoints.html %}
 </article>
-{% include episode_navbar.html episode_navbar_title=false %}
+{% include lecture_page_navbar.html %}
