--- a/_includes/lecture_page_navbar.html
+++ b/_includes/lecture_page_navbar.html
@@ -1,3 +1,4 @@
+{% assign index_page = 'index.html' %}
 {% assign collections = site.data.navigation-list.navigation_list %}
 {% assign collections_size = collections | size %}
 {% for collection in collections %}
@@ -31,15 +32,20 @@
                         {% assign prev_link = prev_link | append: collection_id | append: '/' | append: collections[i].links[prev_item_index].link %}
                         {% assign prev_title = collections[i].links[prev_item_index].title %}
                     {% endif %}
+
+                    {% assign prev_link_icon_class = "glyphicon glyphicon-menu-left" %}
+                    {% if prev_title == "Home" %}
+                        {% assign prev_link = next_link | append: index_page %}
+                        {% assign prev_link_icon_class = "glyphicon glyphicon-menu-up" %}
+                    {% endif %}
+
+
                     <div class="col-xs-4">
                         <div class="row">
                             <div class="col-xs-1"> 
                                 <h3 class="text-left">
-                                    {% if prev_title != "Home" %}
-                                        <a href="{{ prev_link }}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span><span class="sr-only">previous episode</span></a>
-                                    {% else %}
-                                        <a href="{{ page.root }}/"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span><span class="sr-only">lesson home</span></a>
-                                    {% endif %}
+                                    <a href="{{ prev_link }}"><span class="{{ prev_link_icon_class }}" aria-hidden="true"></span><span class="sr-only">previous episode</span></a>
+                                   
                                 </h3>
                             </div>
                             <div class="col-xs-11">
@@ -53,7 +59,7 @@
                     </div>
 
                     <div class="col-xs-4">
-                        <h3 class="maintitle"><a href="{{ page.root }}/">{{ site.title }}</a></h3>
+                        <h3 class="maintitle"><a href="{{ page.root }}/{{ index_page }}">{{ site.title }}</a></h3>
                     </div>
 
                     {% comment %}
@@ -76,7 +82,13 @@
                         {% assign next_page_link = collections[i].links[next_item_index] %}
                         {% assign next_link = next_link | append: collection_id | append: '/' | append: next_page_link.link %}
                         {% assign next_title = next_page_link.title %}
-                    {% endif %} 
+                    {% endif %}
+                    {% assign next_link_icon_class = "glyphicon glyphicon-menu-right" %}
+                    {% if next_title == "Home" %}
+                        {% assign next_link = next_link | append: index_page %}
+                        {% assign next_link_icon_class = "glyphicon glyphicon-menu-up" %}
+                    {% endif %}
+
                     <div class="col-xs-4">
                         <div class="row">
                             <div class="col-xs-11">
@@ -86,11 +98,7 @@
                             </div>
                             <div class="col-xs-1">
                                 <h3 class="text-right">
-                                    {% if next_title != "Home" %}
-                                        <a href="{{ next_link }}"><span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span><span class="sr-only">next episode</span></a>
-                                    {% else %}
-                                        <a href="{{ page.root }}/"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span><span class="sr-only">lesson home</span></a>
-                                    {% endif %}
+                                    <a href="{{ next_link }}"><span class="{{ next_link_icon_class }}" aria-hidden="true"></span><span class="sr-only">next episode</span></a>
                                 </h3>
                             </div>
                         </div>
