--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,8 @@
 {% comment %}
 Lesson navigation bar.
 {% endcomment %}
+
+{% assign index_page = 'index.html' %}
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -14,8 +16,8 @@ Lesson navigation bar.
 
 
             {% comment %} Always show link to home page. {% endcomment %}
-            <a class="navbar-brand logo" href="{{ page.root }}{% link index.md %}"></a>
-            <a class="navbar-brand desktop-only" href="{{ page.root }}{% link index.md %}">Home</a>
+            <a class="navbar-brand logo" href="{{ page.root }}/{{ index_page }}"></a>
+            <a class="navbar-brand desktop-only" href="{{ page.root }}/{{ index_page }}">Home</a>
 
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -29,7 +31,7 @@ Lesson navigation bar.
 
                 {% comment %} Show lecture material{% endcomment %}
                 <li class="dropdown">
-                    <a href="{{ page.root }}/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lectures<span class="caret"></span></a>
+                    <a href="{{ page.root }}/{{ index_page }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lectures<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         {% for collection in site.data.navigation-list.navigation_list %}
                         {% assign id = collection.id %}
@@ -62,11 +64,11 @@ Lesson navigation bar.
                     {% comment %} Show extras for lessons or if this is the main workshop-template repo (where they contain documentation). {% endcomment %}
                     {% if site.kind == "lesson" %}
                     <li class="dropdown">
-                        <a href="{{ page.root }}/" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Extras <span class="caret"></span></a>
+                        <a href="{{ page.root }}/{{ index_page }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Extras <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{{ page.root }}{% link reference.md %}">Reference</a></li>
                             {% for extra in site.extras %}
-                            <li><a href="{{ page.root }}{{ extra.url }}">{{ extra.title }}</a></li>
+                            <li><a href="{{ page.root }}{{ extra.url }}{{ index_page }}">{{ extra.title }}</a></li>
                             {% endfor %}
                         </ul>
                     </li>
