commented out overview and keypoints sections, updated lecture 2 chapter 1, added lecture 2 chapter 2

--- a/_includes/episode_keypoints.html
+++ b/_includes/episode_keypoints.html
@@ -1,6 +1,6 @@
 {% comment %}
   Display key points for an episode.
-{% endcomment %}
+  move endcomment line to above beginning of blockquote
 <blockquote class="keypoints">
   <h2>Key Points</h2>
   <ul>
@@ -9,3 +9,4 @@
     {% endfor %}
   </ul>
 </blockquote>
+{% endcomment %}
