--- a/_includes/episode_overview.html
+++ b/_includes/episode_overview.html
@@ -1,6 +1,6 @@
 {% comment %}
     Display an episode's timings and learning objectives.
-{% endcomment %}
+    move endcomment line to above beginning of blockquote
 <blockquote class="objectives">
   <h2>Overview</h2>
 
@@ -34,3 +34,4 @@
   </div>
 
 </blockquote>
+{% endcomment %}
