--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -24,9 +24,10 @@ Lesson navigation bar.
             <ul class="nav navbar-nav">
 
                 {% if site.kind == "lesson" %}
-                {% comment %} Show setup instructions. {% endcomment %}
+                {% comment %} Show setup instructions.
                 <li><a href="{{ page.root }}{% link setup.md %}">Setup</a></li>
-
+                move endcomment above <li><a href="{{ page.root }}{% link setup.md %}">Setup</a></li> to show extras
+                {% endcomment %}
 
 
                 {% comment %} Show lecture material{% endcomment %}
@@ -61,7 +62,8 @@ Lesson navigation bar.
 
                     {% endif %}
 
-                    {% comment %} Show extras for lessons or if this is the main workshop-template repo (where they contain documentation). {% endcomment %}
+                    {% comment %}
+                    Show extras for lessons or if this is the main workshop-template repo (where they contain documentation).
                     {% if site.kind == "lesson" %}
                     <li class="dropdown">
                         <a href="{{ page.root }}/{{ index_page }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Extras <span class="caret"></span></a>
@@ -73,6 +75,8 @@ Lesson navigation bar.
                         </ul>
                     </li>
                     {% endif %}
+                    move endcomment above if site.kind to show extras
+                    {% endcomment %}
         </div>
     </div>
 </nav>
