--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,21 +29,20 @@ Lesson navigation bar.
                 move endcomment above <li><a href="{{ page.root }}{% link setup.md %}">Setup</a></li> to show extras
                 {% endcomment %}
 
-
                 {% comment %} Show lecture material{% endcomment %}
                 <li class="dropdown">
                     <a href="{{ page.root }}/{{ index_page }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lectures<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        {% for collection in site.data.navigation-list.navigation_list %}
-                        {% assign id = collection.id %}
-                        {% assign collection_title = collection.title %}
-                        {% assign collection_first_link = collection.links[0].link %}
+                        {%- for collection in site.data.navigation-list.navigation_list -%}
+                        {%- assign id = collection.id -%}
+                        {%- assign collection_title = collection.title -%}
+                        {%- assign collection_first_link = collection.links[0].link -%}
                         <li class="dropdown-submenu">
                             <a class="nav-folder" href="{{ page.root }}/{{ id }}/{{ collection_first_link }}">{{ collection_title }}</a>
                             <ul class="dropdown-menu">
-                                {% for link in collection.links %}
+                                {%- for link in collection.links -%}
                                 <li><a href="{{ page.root }}/{{ id }}/{{ link.link }}"> {{ link.title }}</a></li>
-                                {% endfor %}
+                                {%- endfor -%}
                             </ul>
                         </li>
                         {% endfor %}
@@ -77,6 +76,17 @@ Lesson navigation bar.
                     {% endif %}
                     move endcomment above if site.kind to show extras
                     {% endcomment %}
+                    <div class="pull-right">
+                        <form class="navbar-form" role="search" id="search-container" action="{{ "/search/" | absolute_url }}" method="get">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search" name="search-term" id="search-box">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
         </div>
     </div>
 </nav>
