--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -77,7 +77,7 @@ Lesson navigation bar.
                     move endcomment above if site.kind to show extras
                     {% endcomment %}
                     <div class="pull-right">
-                        <form class="navbar-form" role="search" id="search-container" action="{{ "/search/" | absolute_url }}" method="get">
+                        <form class="navbar-form" role="search" id="search-container" action="{{ page.root }}/search.html" method="get">
                             <div class="input-group">
                                 <input type="text" class="form-control" placeholder="Search" name="search-term" id="search-box">
                                 <div class="input-group-btn">
