fixed title, added week 5 content

--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -3,7 +3,9 @@ layout: base
 ---
 {% include lecture_page_navbar.html %}
 <article>
+{% comment %}
 {% include episode_title.html %}
+{% endcomment %}
 {% include episode_overview.html %}
 {{content}}
 {% include episode_keypoints.html %}
