--- a/assets/css/lesson.scss
+++ b/assets/css/lesson.scss
@@ -133,9 +133,9 @@ font-size: 18px;
 
 code {
   white-space: nowrap;
-  padding: 5px 5px 5px 5px;
-  font-size: 12pt;
-  border: none;
+  padding: 2px 2px 2px 2px;
+  font-size: 10pt;
+  //border: none;
   color: #238E23;
   background-color: #23;
 }
