added aio entry into navbar
uncomment following code to add aio to navbar:

<li role="separator" class="divider"></li>
                        <li><a href="{{ page.root }}{% link aio.md %}">All in one page (In Progress - Not Working Yet)</a></li>

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -47,6 +47,8 @@ Lesson navigation bar.
                             </ul>
                         </li>
                         {% endfor %}
+                        <!-- <li role="separator" class="divider"></li>
+                        <li><a href="{{ page.root }}{% link aio.md %}">All in one page (In Progress - Not Working Yet)</a></li> -->
                     </ul>
                 </li>
 
