--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,26 +29,34 @@ Lesson navigation bar.
                 move endcomment above <li><a href="{{ page.root }}{% link setup.md %}">Setup</a></li> to show extras
                 {% endcomment %}
 
-
                 {% comment %} Show lecture material{% endcomment %}
                 <li class="dropdown">
                     <a href="{{ page.root }}/{{ index_page }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Lectures<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         {% for collection in site.data.navigation-list.navigation_list %}
-                        {% assign id = collection.id %}
-                        {% assign collection_title = collection.title %}
-                        {% assign collection_first_link = collection.links[0].link %}
+                        {%- assign id = collection.id -%}
+                        {%- assign collection_title = collection.title -%}
+                        {%- assign collection_first_link = collection.links[0].link -%}
+                        {%- assign collection_links_size = collection.links | size -%}
                         <li class="dropdown-submenu">
                             <a class="nav-folder" href="{{ page.root }}/{{ id }}/{{ collection_first_link }}">{{ collection_title }}</a>
                             <ul class="dropdown-menu">
                                 {% for link in collection.links %}
+                                {% if forloop.index == collection_links_size %}
+                                {%- comment -%}
+                                  Add seperator to distinguish between the all in one page for that collection.
+                                {%- endcomment -%}
+                                  <li role="separator" class="divider"></li>
+                                {% endif %}
                                 <li><a href="{{ page.root }}/{{ id }}/{{ link.link }}"> {{ link.title }}</a></li>
                                 {% endfor %}
                             </ul>
                         </li>
                         {% endfor %}
-                        <!-- <li role="separator" class="divider"></li>
-                        <li><a href="{{ page.root }}{% link aio.md %}">All in one page (In Progress - Not Working Yet)</a></li> -->
+                        <!--
+                         <li role="separator" class="divider"></li>
+                        <li><a href="{{ page.root }}{% link aio.md %}">All in one page (In Progress - Not Working Yet)</a></li>
+                      -->
                     </ul>
                 </li>
 
