--- a/_includes/all_in_one.html
+++ b/_includes/all_in_one.html
@@ -2,7 +2,7 @@
 <script>
     var collection_urls = [
     {% for collection_page in site[page.collection] %}
-    '{{ collection_page.url }}'{% unless forloop.last %},{% endunless %}
+    '{{ collection_page.url }}.html'{% unless forloop.last %},{% endunless %}
     {% endfor %}
     ];
 
@@ -12,5 +12,5 @@
 Create anchor for each one of the episodes.
 {% endcomment %}
 {% for collection_page in site[page.collection] %}
-<article id="{{ collection_page.url }}"></article>
+<article id="{{ collection_page.url }}.html"></article>
 {% endfor %}
