toggle lecture dropdown from element with #01-introduction

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -14,3 +14,4 @@
 </script>
 
 <script src="{{ page.root }}/assets/js/content-toggle.js"></script>
+<script src="{{ page.root }}/assets/js/navigation-menu.js"></script>
