--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" type="text/css" href="{{ page.root }}/assets/css/dropdown-menu.css" />
     <link rel="stylesheet" type="text/css" href="{{ page.root }}/assets/css/collapsible-content.css" />
 
+    <link rel="stylesheet" type="text/css" href="{{ page.root }}/assets/css/datatables.min.css"/>
+
     {% include favicons.html %}
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
