--- a/assets/css/lesson.scss
+++ b/assets/css/lesson.scss
@@ -258,11 +258,9 @@ h1 {
   padding-left: 250px;
 }
 nav.navbar-default {
-  background: none;
+  background: white;
   border: none;
   box-shadow: none;
-  margin-top: 35px;
-  margin-bottom: 35px;
   a {
     font-family: "national-medium";
     text-transform: uppercase;
