--- a/assets/css/lesson.scss
+++ b/assets/css/lesson.scss
@@ -255,12 +255,16 @@ h1 {
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: 400px 1000px;
+  // Set height to 60px so that won't crop the logo
+  height: 60px;
   padding-left: 250px;
 }
+
 nav.navbar-default {
   background: white;
   border: none;
   box-shadow: none;
+  padding-top: 15px;
   a {
     font-family: "national-medium";
     text-transform: uppercase;
